# xtensor-stack

./: LICENSE  README.md
recipe/: bld.bat  meta.yaml
src/: CMakeLists.txt
src/blas/: Makefile
src/cblas/: Makefile
src/lapack/: Makefile  ilazlr.f
src/tests/: CMakeLists.txt
